--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,19 +17,21 @@
     @apply px-3 py-2 border m-3 rounded focus:outline-none;
   }
 
-  /*
   h1 {
     @apply text-3xl md:text-4xl font-bold;
   }
+
   h2 {
     @apply text-2xl md:text-3xl font-bold;
   }
+
   h3 {
     @apply text-xl md:text-2xl font-bold;
   }
+
   h4 {
     @apply text-lg md:text-xl font-bold;
-  } */
+  }
 }
 
 @layer components {
