--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,35 @@
 @tailwind components;
 @tailwind utilities;
 
+/* custom fonts */
+@layer base {
+  .font-outline {
+    -webkit-text-stroke: 2.5px black;
+    background-color: transparent;
+  }
+
+  .font-outline-sm {
+    -webkit-text-stroke: 1.2px black;
+    background-color: transparent;
+  }
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #0f766e;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 @layer base {
   body {
     @apply font-redditsans;
